crates/python_parser/tests/snapshots/invalid_syntax@params_multiple_star_separator.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/params_multiple_star_separator.py
---
## AST

```
Module(
    ModModule {
        range: 0..53,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..19,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..9,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 17..18,
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 17..18,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 21..24,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 25..52,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 29..32,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 32..47,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 33..34,
                                parameter: Parameter {
                                    range: 33..34,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 33..34,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 39..40,
                                parameter: Parameter {
                                    range: 39..40,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 39..40,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 42..43,
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 42..43,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 49..52,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 49..52,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, *, *, b): ...
  |               ^ Syntax Error: Only one '*' separator allowed
2 | def foo(a, *, b, c, *): ...
  |


  |
1 | def foo(a, *, *, b): ...
2 | def foo(a, *, b, c, *): ...
  |                     ^ Syntax Error: Only one '*' separator allowed
  |
